index.html修改和新增index1.html

--- a/index1.html
+++ b/index1.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>git 提交的第一个文件</title>
+    <title>LICENSE</title>
 </head>
 <body>
-    git 提交的第一个文件
-    修改：新增一句话
-    第二次修改：33333
+    这是一个LICENSE文件
 </body>
 </html>
